<resources>
    <string name="app_name">Taliya Schneider: In the Name of Love</string>
    <string name="Album_Name">In the Name of Love</string>
    <string name="Song_1">1. I Am the Light</string>
    <string name="Song_2">2. Colors of the Galaxy</string>
    <string name="Song_3">3. Little King</string>
    <string name="Song_4">4. Nona</string>
    <string name="Song_5">5. Lavender Island</string>
    <string name="Song_6">6. Luna</string>
    <string name="Song_7">7. Angel by Our Side</string>
    <string name="Song_8">8. Sacred</string>
    <string name="Song_9">9. In the Name of Love</string>


</resources>
